--- a/wolcare/workShop/createWorkShopViewController.xib
+++ b/wolcare/workShop/createWorkShopViewController.xib
@@ -10,6 +10,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="createWorkShopViewController" customModule="wolcare" customModuleProvider="target">
             <connections>
                 <outlet property="HourBeginTxt" destination="lc2-78-ZNy" id="2tK-9X-O5H"/>
+                <outlet property="categoryPicker" destination="YfW-1X-KeF" id="ckY-VA-uh3"/>
                 <outlet property="dateBeginEdt" destination="BnK-9G-zt5" id="1re-s3-a1v"/>
                 <outlet property="dateBeginTxt" destination="x2d-3d-udQ" id="ZA0-fk-CU1"/>
                 <outlet property="descriptionEdt" destination="06t-UO-uma" id="Cvf-fj-3wM"/>
@@ -35,7 +36,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BnK-9G-zt5">
-                    <rect key="frame" x="304" y="474" width="306" height="34"/>
+                    <rect key="frame" x="304" y="675" width="306" height="34"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
@@ -45,62 +46,67 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aAv-AP-Z0G">
-                    <rect key="frame" x="278" y="607" width="332" height="34"/>
+                    <rect key="frame" x="278" y="808" width="332" height="34"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Heure de début :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lc2-78-ZNy">
-                    <rect key="frame" x="75" y="562" width="129" height="21"/>
+                    <rect key="frame" x="75" y="761" width="129" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Heure de fin :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jXS-ZE-sIW">
-                    <rect key="frame" x="75" y="613" width="103" height="21"/>
+                    <rect key="frame" x="75" y="812" width="103" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JBX-U0-Bry">
-                    <rect key="frame" x="304" y="553" width="306" height="34"/>
+                    <rect key="frame" x="304" y="754" width="306" height="34"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date de l'atelier :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x2d-3d-udQ">
-                    <rect key="frame" x="75" y="481" width="129" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="workshop" translatesAutoresizingMaskIntoConstraints="NO" id="RAs-sY-ToT">
                     <rect key="frame" x="200" y="30" width="410" height="335"/>
                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i2n-SH-yJc">
-                    <rect key="frame" x="75" y="664" width="97" height="21"/>
+                    <rect key="frame" x="75" y="863" width="97" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="06t-UO-uma">
-                    <rect key="frame" x="272" y="656" width="438" height="34"/>
+                    <rect key="frame" x="272" y="857" width="438" height="34"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
+                <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YfW-1X-KeF">
+                    <rect key="frame" x="180" y="439" width="450" height="216"/>
+                </pickerView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date de l'atelier :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x2d-3d-udQ">
+                    <rect key="frame" x="75" y="680" width="129" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
+                <constraint firstItem="x2d-3d-udQ" firstAttribute="top" secondItem="YfW-1X-KeF" secondAttribute="bottom" constant="25" id="0gK-do-hot"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="aAv-AP-Z0G" secondAttribute="trailing" constant="200" id="7Sa-d3-yxJ"/>
                 <constraint firstItem="06t-UO-uma" firstAttribute="leading" secondItem="i2n-SH-yJc" secondAttribute="trailing" constant="100" id="7Zt-BC-yNS"/>
                 <constraint firstItem="cXS-Iu-AWo" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="75" id="9bA-A8-sni"/>
+                <constraint firstItem="BnK-9G-zt5" firstAttribute="top" secondItem="YfW-1X-KeF" secondAttribute="bottom" constant="20" id="AtB-KF-9Qz"/>
                 <constraint firstItem="cXS-Iu-AWo" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="400" id="Fil-9w-U5V"/>
+                <constraint firstItem="YfW-1X-KeF" firstAttribute="top" secondItem="d0l-ik-Osd" secondAttribute="bottom" constant="10" id="IeI-FQ-RsS"/>
                 <constraint firstItem="aAv-AP-Z0G" firstAttribute="leading" secondItem="jXS-ZE-sIW" secondAttribute="trailing" constant="100" id="Jye-1L-Hp4"/>
                 <constraint firstItem="RAs-sY-ToT" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="30" id="KIF-td-auB"/>
                 <constraint firstItem="d0l-ik-Osd" firstAttribute="top" secondItem="RAs-sY-ToT" secondAttribute="bottom" constant="30" id="Kri-b9-SW3"/>
-                <constraint firstItem="BnK-9G-zt5" firstAttribute="top" secondItem="d0l-ik-Osd" secondAttribute="bottom" constant="45" id="L14-Ox-Q7P"/>
+                <constraint firstItem="YfW-1X-KeF" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="180" id="LKX-jO-GaX"/>
                 <constraint firstItem="aAv-AP-Z0G" firstAttribute="top" secondItem="JBX-U0-Bry" secondAttribute="bottom" constant="20" id="N5O-GR-6wW"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="BnK-9G-zt5" secondAttribute="trailing" constant="200" id="PxC-8B-Abf"/>
-                <constraint firstItem="x2d-3d-udQ" firstAttribute="top" secondItem="cXS-Iu-AWo" secondAttribute="bottom" constant="60" id="SK9-OF-bYs"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="RAs-sY-ToT" secondAttribute="trailing" constant="200" id="UxB-7h-ALs"/>
                 <constraint firstItem="d0l-ik-Osd" firstAttribute="leading" secondItem="cXS-Iu-AWo" secondAttribute="trailing" constant="175" id="Ws4-Hi-GER"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="JBX-U0-Bry" secondAttribute="trailing" constant="200" id="Xnz-sl-Yqd"/>
@@ -115,6 +121,7 @@
                 <constraint firstItem="jXS-ZE-sIW" firstAttribute="top" secondItem="lc2-78-ZNy" secondAttribute="bottom" constant="30" id="hst-G1-3NF"/>
                 <constraint firstItem="x2d-3d-udQ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="75" id="jUx-FE-fBU"/>
                 <constraint firstItem="RAs-sY-ToT" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="kch-mM-Jxy"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="YfW-1X-KeF" secondAttribute="trailing" constant="180" id="kg9-9Y-vJ5"/>
                 <constraint firstItem="lc2-78-ZNy" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="75" id="nK0-nf-VWj"/>
                 <constraint firstItem="lc2-78-ZNy" firstAttribute="top" secondItem="x2d-3d-udQ" secondAttribute="bottom" constant="60" id="oIS-9F-FwU"/>
                 <constraint firstItem="JBX-U0-Bry" firstAttribute="leading" secondItem="lc2-78-ZNy" secondAttribute="trailing" constant="100" id="odN-6Y-6jN"/>
