--- a/wolcare/request/RequestCreateViewController.xib
+++ b/wolcare/request/RequestCreateViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="ipad9_7" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,8 +10,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RequestCreateViewController" customModule="wolcare" customModuleProvider="target">
             <connections>
                 <outlet property="cameraButton" destination="sY0-sz-oJm" id="hIN-D3-1Ha"/>
+                <outlet property="categorieEdt" destination="EBu-zs-lVE" id="mqo-Ze-ard"/>
                 <outlet property="libraryButton" destination="3YX-uH-M9S" id="AFw-S4-oDq"/>
                 <outlet property="mainImageView" destination="ke1-hW-luk" id="L9R-Ug-4jd"/>
+                <outlet property="pseudo" destination="3WN-vu-mOu" id="4hK-MZ-2cd"/>
                 <outlet property="requestDescription" destination="je9-co-pi2" id="V6g-pC-kr3"/>
                 <outlet property="spener" destination="Aqt-aN-YO0" id="Uzw-4w-7rM"/>
                 <outlet property="titleRequest" destination="9L8-tH-xSd" id="d9h-fM-gEB"/>
@@ -51,7 +53,7 @@
                     <constraints>
                         <constraint firstAttribute="width" constant="558" id="HRx-WT-Eqk"/>
                         <constraint firstAttribute="height" constant="500" id="KXb-Vs-C7e"/>
-                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="500" id="fBJ-G5-1d0"/>
+                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="458" id="OCh-hU-7zz"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -60,7 +62,7 @@
                     </userDefinedRuntimeAttributes>
                 </imageView>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description du besoin" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="je9-co-pi2">
-                    <rect key="frame" x="109" y="636" width="550" height="200"/>
+                    <rect key="frame" x="109" y="685" width="550" height="200"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="550" id="8id-tY-7tr"/>
                         <constraint firstAttribute="height" constant="200" id="byx-VL-Lto"/>
@@ -78,6 +80,22 @@
                         <action selector="cameraWithSender:" destination="-1" eventType="touchUpInside" id="scH-dd-NEo"/>
                     </connections>
                 </button>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Pseudo" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3WN-vu-mOu">
+                    <rect key="frame" x="109" y="636" width="227" height="34"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="227" id="UGh-4g-pZD"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Categorie" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EBu-zs-lVE">
+                    <rect key="frame" x="432" y="636" width="227" height="34"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="227" id="G2y-1g-G9H"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -90,12 +108,16 @@
                 <constraint firstItem="Aqt-aN-YO0" firstAttribute="leading" secondItem="AxT-H4-LM7" secondAttribute="leading" id="C7r-jO-uKj"/>
                 <constraint firstItem="Aqt-aN-YO0" firstAttribute="trailing" secondItem="AxT-H4-LM7" secondAttribute="trailing" id="DwI-mw-zix"/>
                 <constraint firstItem="Aqt-aN-YO0" firstAttribute="bottom" secondItem="AxT-H4-LM7" secondAttribute="bottom" id="FDD-Mv-e9K"/>
+                <constraint firstItem="je9-co-pi2" firstAttribute="top" secondItem="3WN-vu-mOu" secondAttribute="bottom" constant="15" id="Fp4-wc-s5y"/>
+                <constraint firstItem="3WN-vu-mOu" firstAttribute="leading" secondItem="AxT-H4-LM7" secondAttribute="leading" constant="109" id="Hlr-dx-s0Z"/>
+                <constraint firstItem="EBu-zs-lVE" firstAttribute="top" secondItem="3YX-uH-M9S" secondAttribute="bottom" constant="15" id="PF2-rs-QRc"/>
                 <constraint firstItem="sY0-sz-oJm" firstAttribute="top" secondItem="ke1-hW-luk" secondAttribute="bottom" constant="8" id="SKO-Y1-IfW"/>
-                <constraint firstItem="je9-co-pi2" firstAttribute="top" secondItem="3YX-uH-M9S" secondAttribute="bottom" constant="15" id="SiF-qT-i1R"/>
+                <constraint firstItem="3WN-vu-mOu" firstAttribute="top" secondItem="sY0-sz-oJm" secondAttribute="bottom" constant="15" id="U7s-vW-Djd"/>
                 <constraint firstItem="9L8-tH-xSd" firstAttribute="top" secondItem="AxT-H4-LM7" secondAttribute="top" constant="20" id="YAW-ah-n8E"/>
                 <constraint firstItem="ke1-hW-luk" firstAttribute="top" secondItem="9L8-tH-xSd" secondAttribute="bottom" constant="20" id="cIi-1i-KeL"/>
                 <constraint firstItem="je9-co-pi2" firstAttribute="centerX" secondItem="Gzz-It-VP8" secondAttribute="centerX" id="hdq-Ud-P2Z"/>
                 <constraint firstItem="AxT-H4-LM7" firstAttribute="trailing" secondItem="3YX-uH-M9S" secondAttribute="trailing" constant="176" id="qjJ-Bk-YfA"/>
+                <constraint firstItem="EBu-zs-lVE" firstAttribute="leading" secondItem="3WN-vu-mOu" secondAttribute="trailing" constant="96" id="yYO-Xd-dzL"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="AxT-H4-LM7"/>
             <point key="canvasLocation" x="92.96875" y="772.8515625"/>
